; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libbegemot/extr_rpoll.c_poll_unregister.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libbegemot/extr_rpoll.c_poll_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32* }

@rpoll_trace = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"poll_unregister(%d)\00", align 1
@regs = common dso_local global %struct.TYPE_2__* null, align 8
@rebuild = common dso_local global i32 0, align 4
@regs_used = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @poll_unregister(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @rpoll_trace, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* @stderr, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @fprintf(i32 %6, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %7)
  br label %9

9:                                                ; preds = %5, %1
  %10 = call i32 (...) @poll_blocksig()
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @regs, align 8
  %12 = load i32, i32* %2, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 -1, i32* %15, align 8
  store i32 1, i32* @rebuild, align 4
  %16 = load i32, i32* @regs_used, align 4
  %17 = add nsw i32 %16, -1
  store i32 %17, i32* @regs_used, align 4
  %18 = call i32 (...) @poll_unblocksig()
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i32) #1

declare dso_local i32 @poll_blocksig(...) #1

declare dso_local i32 @poll_unblocksig(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
